[metadata]
name = tno.mpc.protocols.kaplan_meier
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Kaplan Meier using Paillier homomorphic encryption and a helper party
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Healthcare Industry
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
   Topic :: Scientific/Engineering :: Medical Science Apps.
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    protocols
    kaplan meier
    survival analysis
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.protocols.kaplan_meier/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/protocols/kaplan_meier/0.1.3
    Source Code = https://github.com/TNO-MPC/protocols.kaplan_meier
version = attr: tno.mpc.protocols.kaplan_meier.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.protocols.kaplan_meier
    tno.mpc.protocols.kaplan_meier.test
zip_safe = False
install_requires =
    lifelines
    mpyc~=0.7.0
    numpy
    scipy
    tno.mpc.communication
    tno.mpc.encryption_schemes.paillier>=0.5.0
    tno.mpc.encryption_schemes.templates>=2.0.0
    tno.mpc.encryption_schemes.utils>=0.6.1
    tno.mpc.mpyc.matrix_inverse
namespace_packages =
    tno
    tno.mpc
    tno.mpc.protocols
include_package_data = True

[options.package_data]
tno.mpc.protocols.kaplan_meier = py.typed

[options.extras_require]
gmpy =
    gmpy2
tests =
    data-science-types
    numpy<1.20  # to prevent type-hint conflicts
    pytest
    pytest-asyncio
    tno.mpc.mpyc.stubs
